--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-	<head>First Repository</head>
+	<head>
+		<title>First Repository</title>
+	</head>
 	<body>
 		<p>This is my first github repository.</p>
 	</body>
